manifests/dreamkast-tools/dreamkast-api-mock/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast-api-mock
  name: dreamkast-api-mock
  namespace: dreamkast-api-mock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dreamkast-api-mock
  strategy: {}
  template:
    metadata:
      labels:
        app: dreamkast-api-mock
    spec:
      containers:
      - image: 607167088920.dkr.ecr.ap-northeast-1.amazonaws.com/dreamkast-api-mock:main
        name: dreamkast-api-mock
        ports:
        - containerPort: 8080
        resources: {}
