manifests/dreamkast-tools/dreamkast-api-mock/base/ingress.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dreamkast-api-mock-ingress
  namespace: dreamkast-api-mock
  labels:
    app: dreamkast-api-mock
spec:
  virtualhost:
    fqdn: dreamkast-api-mock.dev.cloudnativedays.jp
    tls:
      secretName: cert-manager/wildcard-dev-cloudnativedays-jp
  routes:
    - conditions:
      - prefix: /
      services:
      - name: dreamkast-api-mock
        port: 8080
